# draco-rust

./: .gitignore  AGENTS.md  BENCHMARK_TESTS.md  README.md  actionable_status.yaml  hardening_status.yaml  implementation_state.yaml
.github/workflows/: ci.yml  release.yml
crates/: Cargo.toml
crates/draco-core/: API.md  Cargo.toml  README.md
crates/draco-core/examples/: decode_file.rs  dump_drc_header.rs  verify_corner_table.rs
crates/draco-core/src/: ans.rs  attribute_octahedron_transform.rs  attribute_quantization_transform.rs  attribute_transform.rs  attribute_transform_data.rs  bit_utils.rs  compression_config.rs  corner_table.rs  data_buffer.rs  decoder_buffer.rs  direct_bit_decoder.rs  direct_bit_encoder.rs  draco_types.rs  dynamic_integer_points_kd_tree.rs  edgebreaker_connectivity_decoder.rs  encoder_buffer.rs  encoder_options.rs  folded_bit32_coder.rs  geometry_attribute.rs  geometry_indices.rs  kd_tree_attributes_decoder.rs  kd_tree_attributes_encoder.rs  lib.rs  math_utils.rs  mesh.rs  mesh_decoder.rs  mesh_edgebreaker_decoder.rs  mesh_edgebreaker_encoder.rs  mesh_edgebreaker_shared.rs  mesh_edgebreaker_traversal_valence_decoder.rs  mesh_edgebreaker_traversal_valence_encoder.rs  mesh_encoder.rs  mesh_prediction_scheme_data.rs  normal_compression_utils.rs  point_cloud.rs  point_cloud_decoder.rs  point_cloud_encoder.rs  prediction_scheme.rs  prediction_scheme_constrained_multi_parallelogram.rs  prediction_scheme_delta.rs  (+29 more)
crates/draco-core/tests/: attribute_id_test.rs  attribute_integration_test.rs  bench_external_cpp_encode.rs  bench_point_cloud.rs  binary_compatibility_test.rs  compat_encoder_options.rs  compat_encoding_speed.rs  corner_table_test.rs  cpp_comparison_test.rs  cpp_decoder_parity_test.rs  cpp_grid_decode_test.rs  cpp_interop_roundtrip_test.rs  decode_all_testdata.rs  decode_rust_encoded_test.rs  drc_edge_cases_test.rs  drc_existing_files_test.rs  dump_qt.rs  edgebreaker_attribute_seams_test.rs  edgebreaker_event_sequence_test.rs  edgebreaker_minimal_repro.rs  encode_decode_test.rs  encoder_diagnostic_test.rs  gltf_draco_interop_test.rs  gltf_style_roundtrip_test.rs  kd_tree_test.rs  legacy_portable_transform_shims_test.rs  mesh_constrained_multi_parallelogram_test.rs  mesh_edgebreaker_boundary_test.rs  mesh_edgebreaker_multi_component_roundtrip.rs  mesh_edgebreaker_roundtrip.rs  mesh_edgebreaker_test.rs  mesh_edgebreaker_tetrahedron_test.rs  mesh_edgebreaker_torus_test.rs  mesh_edgebreaker_two_tetrahedra_test.rs  mesh_encode_decode_test.rs  mesh_encoder_test.rs  mesh_parallelogram_test.rs  mesh_position_roundtrip_test.rs  mesh_quantization_test.rs  mesh_triangle_comparison_test.rs  (+17 more)
crates/draco-cpp-test-bridge/: Cargo.toml  build.rs
crates/draco-cpp-test-bridge/cpp/: test_bridge.cpp
crates/draco-cpp-test-bridge/examples/: cpp_cube_att.rs
crates/draco-cpp-test-bridge/src/: lib.rs
crates/draco-cpp-test-bridge/tests/: bench_decode_cpp_vs_rust.rs  bench_decode_real_files.rs  bench_encode_cpp_vs_rust.rs  bench_encode_decode_matrix.rs  common.rs  decode_fingerprint.rs  handles.rs  parity_encode_bytes.rs  profile_sequential_pipeline.rs
crates/draco-io/: API.md  Cargo.toml  README.md
crates/draco-io/examples/: check_dedup.rs  decode_drc.rs  decode_rust_lamp.rs  encode_lamp.rs  fbx_demo.rs  fbx_inspect.rs  gltf_demo.rs  polymorphic.rs  unified_api.rs  unified_readers.rs
crates/draco-io/scripts/: import_fbx.py
crates/draco-io/src/: fbx_reader.rs  fbx_writer.rs  gltf_reader.rs  gltf_writer.rs  lib.rs  obj_reader.rs  obj_writer.rs  ply_format.rs  ply_reader.rs  ply_writer.rs  traits.rs
crates/draco-io/tests/: cpp_decode_test.rs  encoding_speed_test.rs  glb_roundtrip_test.rs  ply_bunny_test.rs  roundtrip.rs
crates/draco-io/tools/: blender_roundtrip.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_drc.rs
testdata/: annulus.drc  annulus_eb.drc  bun_zipper.glb  bunny_cpp.drc  bunny_cpp_standard.drc  grid5x5_cpp.drc  lamp_cpp_std.drc  ngon12.drc  quad_test_cpp.drc
testdata/browser/: bun_zipper_ply.glb
testdata/legacy_draco/: README.md  cube_att.mesh_eb.1.0.0.drc  cube_att.mesh_eb.1.1.0.drc  cube_att.mesh_seq.1.0.0.drc  cube_att.mesh_seq.1.1.0.drc  point_cloud_pos_norm.seq.1.0.0.drc  point_cloud_pos_norm.seq.1.1.0.drc
testdata/model_viewer/: cube_rotated_fast.drc  octahedron_normal_fast.drc  octahedron_scaled_fast.drc  point_offset_fast.drc  point_origin_fast.drc  random_25_simple_balanced.drc  sphere_25_simple_compact.drc  square_rotated_fast.drc  tetrahedron_rotated_fast.drc  triangle_xy_fast.drc
testdata/production_draco/: README.md  blender_multi_color.mesh_eb.v2.2.pos_norm_uv_color012.drc  bpy_point_cloud.kd.v2.3.pos_norm_color.drc  bpy_point_cloud.seq.v2.3.pos_norm_color.drc  cube_att.mesh_eb.v2.2.pos_norm_uv.drc  test_pos_color.mesh_eb.v2.2.pos_color.drc
testdata/reference_cpp/: README.md  cpp_encoded_cube_speed_0.drc  cpp_encoded_cube_speed_10.drc  cpp_encoded_cube_speed_2.drc  cpp_encoded_sphere_speed_0.drc  cpp_encoded_sphere_speed_1.drc  cpp_encoded_sphere_speed_10.drc  cpp_encoded_sphere_speed_2.drc  cpp_encoded_sphere_speed_3.drc  cpp_encoded_sphere_speed_5.drc  cpp_encoded_sphere_speed_7.drc
web/: Cargo.toml  README.md  build.ps1  build.sh
web/build-tool/: Cargo.toml
web/build-tool/src/: main.rs
web/dev-server/: Cargo.toml
web/dev-server/src/: main.rs
web/fbx-reader-wasm/: Cargo.toml
web/fbx-reader-wasm/src/: lib.rs
web/fbx-writer-wasm/: Cargo.toml
web/fbx-writer-wasm/src/: lib.rs
web/gltf-reader-wasm/: Cargo.toml
web/gltf-reader-wasm/src/: lib.rs
web/gltf-writer-wasm/: Cargo.toml
web/gltf-writer-wasm/src/: lib.rs
web/obj-reader-wasm/: Cargo.toml  LICENSE
web/obj-reader-wasm/src/: lib.rs
web/obj-writer-wasm/: Cargo.toml
web/obj-writer-wasm/src/: lib.rs
web/ply-reader-wasm/: Cargo.toml
web/ply-reader-wasm/src/: lib.rs
web/ply-writer-wasm/: Cargo.toml
web/ply-writer-wasm/src/: lib.rs
web/www/: app.js  index.html  style.css
