[workspace]
resolver = "2"
members = [
    "build-tool",
    "dev-server",
    "obj-reader-wasm",
    "obj-writer-wasm",
    "ply-reader-wasm",
    "ply-writer-wasm",
    "gltf-reader-wasm",
    "gltf-writer-wasm",
    "fbx-reader-wasm",
    "fbx-writer-wasm",
]

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Blob", "Url", "Document", "Window", "Element", "HtmlElement", "HtmlAnchorElement", "HtmlInputElement", "FileReader", "File", "FileList"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# Separate dependencies for encoder and decoder to reduce WASM size
draco-core-decoder = { path = "../crates/draco-core", package = "draco-core", default-features = false, features = ["decoder"] }
draco-core-encoder = { path = "../crates/draco-core", package = "draco-core", default-features = false, features = ["encoder"] }
draco-io-decoder = { path = "../crates/draco-io", package = "draco-io", default-features = false, features = ["decoder"] }
draco-io-encoder = { path = "../crates/draco-io", package = "draco-io", default-features = false, features = ["encoder"] }

# Aggressive size optimization for release builds
[profile.release]
opt-level = "z"          # Optimize for size (smallest binary)
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Reduce parallelism for better optimization
panic = "abort"          # Smaller panic handling
strip = true             # Strip symbols from binary
