[package]
name = "draco-cpp-test-bridge"
version = "0.1.0"
edition = "2021"
description = "Internal C++ test bridge for Rust parity and performance tests"
publish = false

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
draco-core = { path = "../draco-core" }
draco-io = { path = "../draco-io" }
