[package]
name = "draco-io"
version = "0.1.0"
edition = "2021"
description = "Rust IO helpers for Draco geometry compression formats"
license = "Apache-2.0"
repository = "https://github.com/Filyus/draco-rust"
readme = "README.md"

[dependencies]
draco-core = { version = "0.1.0", path = "../draco-core", default-features = false }
thiserror = "2.0.17"
byteorder = { version = "1.5.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.148", optional = true }
miniz_oxide = { version = "0.6", optional = true }

[features]
default = [
    "all-writers",
    "all-readers",
    "compression",
    "point_cloud_decode",
]
all-readers = ["fbx-reader", "gltf-reader", "obj-reader", "ply-reader"]
all-writers = ["fbx-writer", "gltf-writer", "obj-writer", "ply-writer"]
fbx-reader = ["draco-core/decoder"]
fbx-writer = ["draco-core/encoder"]
gltf-reader = ["draco-core/decoder", "dep:serde", "dep:serde_json"]
gltf-writer = ["draco-core/encoder", "dep:serde", "dep:serde_json"]
obj-reader = ["draco-core/decoder"]
obj-writer = ["draco-core/encoder"]
ply-reader = ["draco-core/decoder", "dep:byteorder"]
ply-writer = ["draco-core/encoder"]
point_cloud_decode = ["draco-core/point_cloud_decode"]
compression = ["miniz_oxide"]

[dev-dependencies]
tempfile = "3.24.0"

[[example]]
name = "check_dedup"
required-features = ["all-readers"]

[[example]]
name = "decode_drc"
required-features = ["all-readers"]

[[example]]
name = "decode_rust_lamp"
required-features = ["all-readers"]

[[example]]
name = "encode_lamp"
required-features = ["all-writers", "all-readers"]

[[example]]
name = "fbx_demo"
required-features = ["all-writers", "all-readers"]

[[example]]
name = "fbx_inspect"
required-features = ["fbx-reader"]

[[example]]
name = "gltf_demo"
required-features = ["gltf-writer", "gltf-reader"]

[[example]]
name = "polymorphic"
required-features = ["all-writers"]

[[example]]
name = "unified_api"
required-features = ["all-writers"]

[[example]]
name = "unified_readers"
required-features = ["all-writers", "all-readers"]

[[test]]
name = "cpp_decode_test"
required-features = ["all-readers"]

[[test]]
name = "encoding_speed_test"
required-features = ["all-writers", "all-readers"]

[[test]]
name = "glb_roundtrip_test"
required-features = ["gltf-writer", "gltf-reader"]

[[test]]
name = "ply_bunny_test"
required-features = ["ply-writer", "ply-reader"]

[[test]]
name = "roundtrip"
required-features = ["all-writers", "all-readers"]
